--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -39,3 +39,13 @@ article .jsbox-exercise .jsbox-tpl-simple {
     border-bottom-right-radius: 4px !important;
     border-bottom-left-radius: 4px !important;
 }
+
+.jsbox-disqus {
+    display: block;
+    width: 100%;
+    min-height: 70px;
+    margin-bottom: 1em;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    overflow: hidden;
+}
