--- a/assets/css/addons.css
+++ b/assets/css/addons.css
@@ -80,3 +80,12 @@ article .jsbox-exercise .jsbox-tpl-simple {
 .jsbox-disqus + p {
     margin-top: 1em;   
 }
+
+
+
+/**
+ * JSBox Loading Style
+ */
+div[data-jsbox] {position:relative;border:3px dashed #ddd;padding:20px;border-radius:10px;overflow: hidden}
+div[data-jsbox]:after {content:"Loading JSBox...";position: absolute;top:0;left:0;display:inline-block;width:100%;height:100%;padding-top: 20pt;background: rgba(255,255,255,.9);text-align: center;font-size: 20pt;color:#bbb;}
+.jsbox-sandbox-runner { height:auto }
